--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <!--
 # Chris Vrabel
-# 5/27/17
-# Prediting Game Probabilities
+# Hunsung Lee
+# 10/30/17
+# Champs League Draft Lottery Simulation
 
 # This is the html file for the webpage of visualizations. Contains the javascript as well.
 -->
@@ -18,6 +19,7 @@
   <!-- Load the d3 library. -->
   <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="jquery.js"></script>
   <style>
     .main-body
     {}
@@ -237,14 +239,14 @@
     </div>
 
     <div class="control-buttons-wrapper">
-      <div class="master-button button">Roll for #1</div>
+      <div class="master-button button" id="master">Roll for #1</div>
       <div class="reset-button button">Reset All </div>
     </div>
   </div>
 
 </div>
 <div class="footer">
-  Copyright © 2018 NBA Champions League | Website created and maintained by Hunsung Lee (Ithaca Ivy Leaguers)
+  Copyright © 2018 NBA Champions League
 </div>
 
 <script type="text/javascript">
@@ -348,6 +350,11 @@ function setup() {
   };
 
   var year = (new Date()).getFullYear();
+
+  $("roll1").click(false);
+  document.getElementById("roll2").disabled = true;
+  document.getElementById("roll3").disabled = true;
+
   document.getElementById("year").textContent = year;
   document.getElementById("subtitle").textContent = "Welcome to the Draft Lottery!";
   document.getElementById("bigNumber0").textContent = "?";
