--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ function updateTextForNewSelection(pickNumber, possibleNewTeam) {
       document.getElementById("master").textContent = "Done Rolling";
       $("#master").addClass("disabled-button");
       document.getElementById("caption").textContent = "The fourth pick goes to..." + teamNamesMap[possibleNewTeam] + "!.....which means the 5th pick goes to " + findUnpickedTeam() + "!";
-      document.getElementById("place5").textContent = findUnpickedTeam();
+      document.getElementById("team-span-5").textContent = pickNumber + ". " + findUnpickedTeam();
   }
 }
 
