--- a/home.html
+++ b/home.html
@@ -318,18 +318,18 @@ function setup() {
   teamNumbers = getPickNumbers();
 
   teamNamesMap = {
-    "Team 1"  :  "Team Synchro",
-    "Team 2"  :  "Big Baller Brown",
-    "Team 3"  :  "Wolf Wall",
-    "Team 4"  :  "Tysons Traffic",
-    "Team 5"  :  "Team Droptop",
-    "Team 6"  :  "Boston Jellyfam",
-    "Team 7"  :  "Luzern's Iron Chef",
-    "Team 8"  :  "Scranton Stranglers",
-    "Team 9"  :  "Seoul Lights",
-    "Team 10" :  "Nuclear Guam",
-    "Team 11" :  "Tompkins CAT",
-    "Team 12" :  "Richmond Rogues"
+    "Team 1"  :  "Big Baller Brown",
+    "Team 2"  :  "Team Synchro",
+    "Team 3"  :  "Seoul Lights (from Luzern)",
+    "Team 4"  :  "Big Baller Brown (from Scranton)",
+    "Team 5"  :  "Wolf Wall (from Seoul)",
+    "Team 6"  :  "Team Droptop (from Richmond)",
+    "Team 7"  :  "Team Droptop (from Wall)",
+    "Team 8"  :  "Seoul Lights (from Droptop)",
+    "Team 9"  :  "Nuclear Guam",
+    "Team 10" :  "Big Baller Brown (from TCAT)",
+    "Team 11" :  "Big Baller Brown (from Tysons)",
+    "Team 12" :  "Boston Jellyfam"
   };
 
   teamOddsMap = {
